# rusTENATI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml  test.yml
docs/: api-reference.md  architecture.md  archives.md  ocr-backends.md
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/cli/: mod.rs
src/cli/commands/: ask.rs  browse.rs  config.rs  dashboard.rs  download.rs  export.rs  graph.rs  info.rs  link.rs  mod.rs  ocr.rs  query.rs  search.rs  serve.rs  status.rs  sync.rs  tags.rs  thumbnail.rs  verify.rs
src/client/: antenati.rs  circuit_breaker.rs  iiif.rs  mod.rs  per_host_limiter.rs  rate_limiter.rs  waf.rs
src/download/: adaptive.rs  engine.rs  mod.rs  progress.rs  state.rs
src/models/: ark.rs  manifest.rs  metadata.rs  mod.rs  search.rs
src/ocr/: azure.rs  claude_vision.rs  enhance.rs  google.rs  mod.rs  pipeline.rs  transkribus.rs
src/web/: api.rs  assets.rs  mod.rs  ws.rs
src/web/frontend/: app.css  app.js  index.html
tests/: iiif_parsing.rs
tests/fixtures/: manifest_v2.json  manifest_v3.json
