[package]
name = "rustenati"
version = "0.1.0"
edition = "2024"
description = "High-performance CLI for dumping Italian genealogical records from Portale Antenati"
license = "MIT"
repository = "https://github.com/massimobedini/rustenati"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "gzip", "brotli"] }

# CLI
clap = { version = "4", features = ["derive", "env", "unicode", "string"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Progress & display
indicatif = "0.17"
console = "0.15"
comfy-table = "7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Rate limiting & retry
governor = "0.8"
backoff = { version = "0.4", features = ["tokio"] }

# State persistence
rusqlite = { version = "0.32", features = ["bundled-full"] }

# URL handling
url = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
directories = "6"

# HTML parsing (for WAF challenge pages)
scraper = "0.22"

# Integrity
sha2 = "0.10"
hex = "0.4"

# Async utilities
tokio-util = "0.7"

# Async trait
async-trait = "0.1"

# Base64 encoding (for OCR image upload)
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
